--- a/src/components/user/ForgotPassword.css
+++ b/src/components/user/ForgotPassword.css
@@ -3,39 +3,6 @@ body {
     height: 100%;
 }
 
-.header {
-    padding: 15px 0;
-    top: 0px;
-    left: 0px;
-    width: 1600px;
-    height: 60px;
-    background: #A03037 0% 0% no-repeat padding-box;
-    opacity: 1;
-}
-
-.header-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    opacity: 1;
-    height: 30px;
-    color: white;
-}
-
-.logo-content-img {
-    margin-right: 10px;
-    align-content: center;
-}
-
-.logo-content {
-    margin-right: 1200px;
-    background: #A03037 0% 0% no-repeat padding-box;
-    height: 50px;
-    display: flex;
-    align-items: center;
-}
-
 .form-content-forgot {
     width: 40%;
     margin: 0 auto;
@@ -55,7 +22,6 @@ body {
     opacity: 1;
 }
 
-
 .form-head-forgot {
     border-radius: 8px;
     background-color: #A03037;
@@ -65,7 +31,7 @@ body {
 .input-forgot {
     padding: 10px;
     border-radius: 5px;
-    width: 154%;
+    width: 176%;
     border: 1px solid #d1c8c8;
     opacity: 1;
 }
@@ -83,7 +49,7 @@ body {
 
 .button-forgot {
     background-color: #A03037;
-    margin-top: 30px;
+    margin-top: 60px;
     color: white;
     border-radius: 7px;
     width: 77%;
@@ -96,4 +62,10 @@ body {
 
 .link-forgot {
     text-align: center;
+}
+
+.home-image{
+    margin-right: 20px;
+    position: absolute;
+    right: 0;
 }
