--- a/src/components/user/ResetPassword.css
+++ b/src/components/user/ResetPassword.css
@@ -3,39 +3,6 @@ body {
     height: 100%;
 }
 
-.header {
-    padding: 15px 0;
-    top: 0px;
-    left: 0px;
-    width: 1600px;
-    height: 60px;
-    background: #A03037 0% 0% no-repeat padding-box;
-    opacity: 1;
-}
-
-.header-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    opacity: 1;
-    height: 30px;
-    color: white;
-}
-
-.logo-content-img {
-    margin-right: 10px;
-    align-content: center;
-}
-
-.logo-content {
-    margin-right: 1200px;
-    background: #A03037 0% 0% no-repeat padding-box;
-    height: 50px;
-    display: flex;
-    align-items: center;
-}
-
 .form-content-reset {
     width: 40%;
     margin: 0 auto;
@@ -94,4 +61,10 @@ body {
 
 .link {
     text-align: center;
+}
+
+.home-image{
+    margin-right: 20px;
+    position: absolute;
+    right: 0;
 }
